created register and login logic
